spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30082  # Optional: Specify a port in the 30000-32767 range
  type: NodePort
